# fireFoam

./: .gitignore  CMakeLists.txt  LICENSE  README.md  installation.bash
cmake/: OpenFOAM.cmake  git_version.H.in
fireFoam/: CMakeLists.txt
fireFoam/lib/: CMakeLists.txt
fireFoam/lib/fvPatchFields/: CMakeLists.txt
fireFoam/lib/fvPatchFields/alphatPyrolysisMeshCorrected/: alphatPyrolysisMeshCorrectedFvPatchScalarField.C  alphatPyrolysisMeshCorrectedFvPatchScalarField.H
fireFoam/lib/fvPatchFields/inertPlateOneSideHeating/: inertPlateOneSideHeatingFvPatchScalarField.C  inertPlateOneSideHeatingFvPatchScalarField.H
fireFoam/lib/fvPatchFieldsPyrolysis/: CMakeLists.txt
fireFoam/lib/fvPatchFieldsPyrolysis/pyrolysisTemperatureCoupled/: pyrolysisTemperatureCoupledFvPatchScalarField.C  pyrolysisTemperatureCoupledFvPatchScalarField.H
fireFoam/lib/fvPatchFieldsPyrolysis/pyrolysisTemperatureFixedRadiation/: pyrolysisTemperatureFixedRadiationFvPatchScalarField.C  pyrolysisTemperatureFixedRadiationFvPatchScalarField.H
fireFoam/lib/fvPatchFieldsPyrolysis/pyrolysisVelocityCoupled/: pyrolysisVelocityCoupledFvPatchVectorField.C  pyrolysisVelocityCoupledFvPatchVectorField.H
fireFoam/lib/regionCoupling/: CMakeLists.txt
fireFoam/lib/regionCoupling/derivedFvPatchFields/filmPyrolysisTemperatureCoupledFF/: filmPyrolysisTemperatureCoupledFFFvPatchScalarField.C  filmPyrolysisTemperatureCoupledFFFvPatchScalarField.H
fireFoam/lib/regionModels/pyrolysisModels/: CMakeLists.txt
fireFoam/lib/regionModels/pyrolysisModels/reactingOneDimFF/: reactingOneDimFF.C  reactingOneDimFF.H
fireFoam/lib/thermophysicalModels/combustionModels/: CMakeLists.txt
fireFoam/lib/thermophysicalModels/combustionModels/eddyDissipationRVFModel/: eddyDissipationRVFModel.C  eddyDissipationRVFModel.H  eddyDissipationRVFModels.C
fireFoam/lib/thermophysicalModels/radiation/derivedFvPatchFields/: CMakeLists.txt
fireFoam/lib/thermophysicalModels/radiation/derivedFvPatchFields/greyDiffusiveRadiationFF/: greyDiffusiveRadiationFFMixedFvPatchScalarField.C
fireFoam/lib/thermophysicalModels/radiation/derivedFvPatchFields/radiationCoupledBaseFF/: radiationCoupledBaseFF.C  radiationCoupledBaseFF.H
fireFoam/lib/thermophysicalModels/radiation/submodels/absorptionEmissionModel/: CMakeLists.txt
fireFoam/lib/thermophysicalModels/radiation/submodels/absorptionEmissionModel/RVFGasSootEmission/: RVFGasSootEmission.C  RVFGasSootEmission.H
fireFoam/lib/thermophysicalModels/radiation/submodels/absorptionEmissionModel/constRadFractionEmission/: constRadFractionEmission.C  constRadFractionEmission.H
fireFoam/lib/thermophysicalModels/radiation/submodels/absorptionEmissionModel/greyMeanSolidAbsorptionEmissionFF/: greyMeanSolidAbsorptionEmissionFF.C  greyMeanSolidAbsorptionEmissionFF.H
fireFoam/solver/: CMakeLists.txt  UEqn.H  YEEqn.H  createClouds.H  createFields.H  createRegionControls.H  fireFoam.C  gitVersion.H  pEqn.H  phrghEqn.H  printVersion.H  readAdditionalThermo.H  rhoEqn.H  setMultiRegionDeltaT.H
fireFoam/solver/include/: infoFieldsOutput.H  infoOutput.H
tutorials/: .gitignore  parallel_config.bash
tutorials/burningBoxesSuppression/: Allclean  Allrun.pre
tutorials/burningBoxesSuppression/0/: C2H4  IDefault  N2  O2  T  U  Ydefault  alphat  flm  fmm  nut  p  p_rgh  ph_rgh.orig
tutorials/burningBoxesSuppression/constant/: additionalControls  boundaryRadiationProperties  combustionProperties  coneInjectionDict  fuelCloudProperties  hRef  pyrolysisZones  radiationProperties  reactions  regionProperties  suppressionCloudProperties  surfaceFilmProperties  thermo.compressibleGas  thermophysicalProperties  turbulenceProperties
tutorials/burningBoxesSuppression/system/: blockMeshDict  controlDict  createPatchDict  decomposeParDict.decomp  decomposeParDict.snappy  extrudeToRegionMeshDict.film  extrudeToRegionMeshDict.solidFuel  fvOptions  fvSchemes  fvSolution  snappyHexMeshDict  topoSetDict.burner  topoSetDict.pyrolysis
tutorials/facade/: Allclean  Allrun.pre  README
tutorials/facade/0/: C3H8  IDefault  N2  O2  T  U  Ydefault  alphat  flm  fmm  nut  p  p_rgh  ph_rgh.org  smoke
tutorials/facade/constant/: additionalControls  boundaryRadiationProperties  combustionProperties  hRef  pyrolysisZones  radiationProperties  reactions  regionProperties  sootModelProperties  suppressionCloudProperties  thermo.compressibleGas  thermophysicalProperties  turbulenceProperties
tutorials/facade/system/: blockMeshDict  changeDictionaryDict  controlDict  createPatchDict  decomposeParDict  extrudeToRegionMeshDict.ChamberWall  extrudeToRegionMeshDict.FacadeWall  fvSchemes  fvSolution  sampleDict  snappyHexMeshDict  topoSetDict
tutorials/gasBurner/: Allrun.pre  README
tutorials/gasBurner/0/: CH4  IDefault  N2  O2  T  U  Ydefault  alphat  k  nut  p  p_rgh  ph_rgh.orig
tutorials/gasBurner/constant/: additionalControls  boundaryRadiationProperties  combustionProperties  fuelCloudProperties  g  hRef  pRef  pyrolysisZones  radiationProperties  reactions  regionProperties  suppressionCloudProperties  suppressionFilmProperties  thermophysicalProperties  turbulenceProperties
tutorials/gasBurner/system/: blockMeshDict.default  controlDict  createPatchDict.default  decomposeParDict.primary  fvSolution  snappyHexMeshDict.default  topoSetDict.burner
tutorials/parallelPanel/8-ft-panel-inert/: Allclean  Allrun.pre  README
tutorials/parallelPanel/8-ft-panel-pmma/: Allrun.pre  README
tutorials/pyrolysisOneDim/: Allclean  Allrun.pre  README
tutorials/pyrolysisOneDim/0/: CH4  IDefault  N2  O2  T  U  Ydefault  alphat  k  nut  p  p_rgh  ph_rgh.orig
tutorials/pyrolysisOneDim/constant/: additionalControls  boundaryRadiationProperties  combustionProperties  fuelCloudProperties  g  hRef  pRef  pyrolysisZones  radiationProperties  reactions  regionProperties  suppressionCloudProperties  suppressionFilmProperties  thermo.compressibleGas  thermophysicalProperties  turbulenceProperties
tutorials/pyrolysisOneDim/system/: blockMeshDict.default  controlDict  extrudeToRegionMeshDict.fuelRegion  fvSchemes  fvSolution  topoSetDict.pyrolysis
(+119 files in other folders)
